--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -45,7 +45,7 @@
         <div class="news-grid">
             <article class="news-card">
                 <div class="news-img-wrapper">
-                    <img src="../images/background.png" alt="ต้นกล้า">
+                    <img src="../images/tonka.jpg" alt="ต้นกล้า">
                 </div>
                 <div class="news-content">
                     <p class="news-date"><i class="far fa-calendar-alt"></i> 10 ม.ค. 2567</p>
@@ -77,7 +77,7 @@
 
             <article class="news-card">
                 <div class="news-img-wrapper">
-                    <img src="../images/background.png" alt="รถดำนา">
+                    <img src="../images/DUM.jpeg" alt="รถดำนา">
                 </div>
                 <div class="news-content">
                     <p class="news-date"><i class="far fa-calendar-alt"></i> 15 ม.ค. 2567</p>
